# hpc-playground

./: .gitignore  CMakeLists.txt  README.md  main.c  matrix_multiplication.c  matrix_multiplication.h  matrix_utils.c  matrix_utils.h  report.c  report.h  utils.c  utils.h
